--- a/user_docs/Readme.html
+++ b/user_docs/Readme.html
@@ -137,6 +137,7 @@ margin-top: 0; }
 blockquote > :last-child {
 margin-bottom: 0; }
 table {
+border-collapse: collapse;
 padding: 0; }
 table tr {
 border-top: 1px solid #cccccc;
