--- a/user_docs/Readme.html
+++ b/user_docs/Readme.html
@@ -400,6 +400,10 @@ color:#DDDDDD;
 <li>Shiftキーを押しながらフォルダやファイルをドロップすると、追加として読み込ませることが出来ます。</li>
 </ul>
 <h2 id="更新履歴">更新履歴</h2>
+<h4 id="ver-4.1">2018/11/10 ver 4.1</h4>
+<ul>
+<li>スライドショー再生中に拡大画面から戻ったとき、落ちることがあるバグを修正</li>
+</ul>
 <h4 id="ver-4.0">2018/11/04 ver 4.0</h4>
 <ul>
 <li>根本部分を作り直し、マルチスレッドでの読み込みを効率化</li>
